--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="UrnaJS/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -13,9 +13,30 @@
             ...
         </div>
         <div class="teclado">
-            ...
+            <div class="teclado--linha">
+                <div class="teclado--botao">1</div>
+                <div class="teclado--botao">2</div>
+                <div class="teclado--botao">3</div>
+            </div>
+            <div class="teclado--linha">
+                <div class="teclado--botao">4</div>
+                <div class="teclado--botao">5</div>
+                <div class="teclado--botao">6</div>
+            </div>
+            <div class="teclado--linha">
+                <div class="teclado--botao">7</div>
+                <div class="teclado--botao">8</div>
+                <div class="teclado--botao">9</div>
+            </div>
+            <div class="teclado--linha">
+                <div class="teclado--botao">0</div>   
+            </div>
+            <div class="teclado--linha">
+                <div class="teclado--botao teclado--botao--branco">BRANCO</div>
+                <div class="teclado--botao teclado--botao--corrigir">CORRIGIR</div>
+                <div class="teclado--botao teclado--botao--confirma">CONFIRMA</div>
+            </div>
         </div>
-
     </div>
 
     <script src="UrnaJS/js/etapas.js"></script>
