--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,9 +32,9 @@
                 <div class="teclado--botao">0</div>   
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao teclado--botao--branco">BRANCO</div>
-                <div class="teclado--botao teclado--botao--corrigir">CORRIGIR</div>
-                <div class="teclado--botao teclado--botao--confirma">CONFIRMA</div>
+                <div class="teclado--botao botao--branco">BRANCO</div>
+                <div class="teclado--botao botao--corrige">CORRIGE</div>
+                <div class="teclado--botao botao--confirma">CONFIRMA</div>
             </div>
         </div>
     </div>
